--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 group 'org.example'
@@ -18,10 +18,10 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-run {
-    standardInput = System.in
+
+javafx {
+    version = "17"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
-application {
-    mainClass = "TodoListApplication"
-}
+mainClassName = "Application.TodoListApplication"
